[package]
name = "bevy_kindly"
license-file = "LICENSE.md"
description = "Minimalistic implementation of entity kinds for Bevy ECS."
homepage = "https://github.com/Zeenobit/bevy_kindly"
repository = "https://github.com/Zeenobit/bevy_kindly"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.8.*"

[dev-dependencies]
bevy = "0.8.0"